# sim_parcialAlgoII

sim_parcial_2v2/: CMakeLists.txt  main.cpp  sim_parcial_2.dia
sim_parcial_2v2/include/: App.h  Article.h  ArticleController.h  Customer.h  CustomerController.h  Order.h  OrderController.h
sim_parcial_2v2/src/: App.cpp  Article.cpp  ArticleController.cpp  Customer.cpp  CustomerController.cpp  Order.cpp  OrderController.cpp
